  ConvSpec-006-008: URI updates, note generation
  ConvSpec-010-048: Ontology update
  ConvSpec-200-247: Note generation
  ConvSpec-250-270: Move property generated by 257 to Instance, note generation
  ConvSpec-3XX: Ontology update, note generation
  ConvSpec-590-410-Links: Note generation
  ConvSpec-5XX: Note generation
  ConvSpec-760-788: Updated processing for 776, 777

Remove namespace declaration for xpath-functions (fix bug with current-dateTime())

--- 1.6.1 2020/12/14

Fix bad agent URIs minted in 240/X30 processing (https://github.com/lcnetdev/marc2bibframe2/issues/192)
Fix errant xml:lang attribute assignment for 3XX fields (https://github.com/lcnetdev/marc2bibframe2/issues/191)

--- 1.6.0 2020/12/04

Update conversion based on updated specifications:
  ConvSpec-LDR-v1.6
  ConvSpec-001-007-v1.6
  ConvSpec-006-008-v1.6
  ConvSpec-010-048-v1.6
  ConvSpec-050-088-v1.6
  ConvSpec-Process0-6-v1.6
  ConvSpec-1XX,7XX,8XX-Names-v1.6
  ConvSpec-200-247-Titles-v1.6
  ConvSpec-250-270-v1.6
  ConvSpec-240,X30-UnifTitle-v1.6
  ConvSpec-3XX-v1.6
  ConvSpec-subjectThesaurus-v1.6
  ConvSpec-600-662-v1.6
  ConvSpec-490,510-Links-v1.6
  ConvSpec-5XX-v1.6
  ConvSpec-NumericSubfields-v1.6
  ConvSpec-720,740-758-v1.6
  ConvSpec-760-788-Links-v1.6

Significant refactoring of 880/$6 processing for multiscript MARC records.

--- 1.5.2 2020/01/30

Generate seriesStatement and seriesEnumeration properties from 8XX fields not matched to 490s (https://github.com/lcnetdev/marc2bibframe2/issues/164)
Update 264 conversion to avoid generating addition bogus ProvisionActivity class (https://github.com/lcnetdev/marc2bibframe2/issues/150)
Correct $6 orientation code processing (https://github.com/lcnetdev/marc2bibframe2/issues/166)
Update 7XX conversion to generate URI for bf:relatedTo property instead of string (https://github.com/lcnetdev/marc2bibframe2/issues/162)