@@ -18,8 +18,14 @@
 
   <x:scenario label="740 - ADDED ENTRY--UNCONTROLLED RELATED/ANALYTICAL TITLE">
     <x:context href="data/ConvSpec-720+740to755/marc.xml"/>
-    <x:expect label="740 I2=2 becomes a hasPart of the main Work" test="//bf:Work[1]/bf:hasPart/bf:Work/bf:title/bf:Title/bf:mainTitle = 'Joint Legislative Committee on Matrimonial and Family Laws, proposed statute'"/>
-    <x:expect label="740 otherwise becomes a relatedTo of the main Work" test="//bf:Work[1]/bf:relatedTo/bf:Work/bf:title/bf:Title/bf:mainTitle = 'Manual del adivino'"/>
+    <x:expect label="740 I2=2 becomes a hasPart of the main Work" test="count(//bf:Work[1]/bf:hasPart) = 1"/>
+    <x:expect label="740 otherwise becomes a relatedTo of the main Work" test="count(//bf:Work[1]/bf:relatedTo) = 1"/>
+    <x:expect label="Brief work description has rdf:type bflc:Uncontrolled" test="//bf:Work[1]/bf:relatedTo/bf:Work/rdf:type/@rdf:resource = 'http://id.loc.gov/ontologies/bflc/Uncontrolled'"/>
+    <x:expect label="$a generates title/Title/rdfs:label of the brief work" test="//bf:Work[1]/bf:hasPart/bf:Work/bf:title/bf:Title/rdfs:label = 'The Joint Legislative Committee on Matrimonial and Family Laws, proposed statute.'"/>
+    <x:expect label="$a generates title/Title/mainTitle of the brief work" test="//bf:Work[1]/bf:hasPart/bf:Work/bf:title/bf:Title/bf:mainTitle = 'Joint Legislative Committee on Matrimonial and Family Laws, proposed statute'"/>
+    <x:expect label="$n generates partNumber of brief work" test="//bf:Work[1]/bf:hasPart[1]/bf:Work/bf:partNumber = 'Part 1'"/>
+    <x:expect label="$p generates partName of brief work" test="//bf:Work[1]/bf:hasPart[1]/bf:Work/bf:partName = 'Economic aspects, custody, taxes.'"/>
+    <x:expect label="$5 generates bflc:applicableInstitution property of brief work" test="//bf:Work[1]/bf:hasPart[1]/bf:Work/bflc:applicableInstitution/bf:Agent/bf:code = 'MnMHCL'"/>
   </x:scenario>
 
   <x:scenario label="752 - ADDED ENTRY--HIERARCHICAL PLACE NAME">
