@@ -61,8 +61,7 @@
 
   <!-- Processing for 630 tags in ConvSpec-600-662.xsl -->
 
-  <xsl:template match="marc:datafield[@tag='730' or (@tag='880' and substring(marc:subfield[@code='6'],1,3)='730')] |
-                       marc:datafield[@tag='740' or (@tag='880' and substring(marc:subfield[@code='6'],1,3)='740')]"
+  <xsl:template match="marc:datafield[@tag='730' or (@tag='880' and substring(marc:subfield[@code='6'],1,3)='730')]"
                 mode="work">
     <xsl:param name="recordid"/>
     <xsl:param name="serialization" select="'rdfxml'"/>
@@ -382,7 +381,7 @@
     <xsl:variable name="vXmlLang"><xsl:apply-templates select="." mode="xmllang"/></xsl:variable>
     <xsl:variable name="nfi">
       <xsl:choose>
-        <xsl:when test="$tag='130' or $tag='630' or $tag='730' or $tag='740'">
+        <xsl:when test="$tag='130' or $tag='630' or $tag='730'">
           <xsl:value-of select="@ind1"/>
         </xsl:when>
         <xsl:when test="$tag='240' or $tag='830' or $tag='440'">
@@ -422,7 +421,7 @@
               </xsl:if>
               <bflc:title30MarcKey><xsl:value-of select="concat(@tag,@ind1,@ind2,normalize-space($marckey))"/></bflc:title30MarcKey>
             </xsl:when>
-            <xsl:when test="substring($tag,2,2)='40' and $tag != '740'">
+            <xsl:when test="substring($tag,2,2)='40'">
               <xsl:if test="$label != ''">
                 <bflc:title40MatchKey><xsl:value-of select="normalize-space($label)"/></bflc:title40MatchKey>
               </xsl:if>
