@@ -15,7 +15,69 @@
 
   <!-- Processing of 720 is handled in ConvSpec-1XX,6XX,7XX,8XX-names.xsl -->
 
-  <!-- Processing of 740 is handled in ConvSpec-X30and240-UnifTitle.xsl -->
+  <xsl:template match="marc:datafield[@tag='740' or (@tag='880' and substring(marc:subfield[@code='6'],1,3)='740')]" mode="work">
+    <xsl:param name="serialization" select="'rdfxml'"/>
+    <xsl:param name="recordid"/>
+    <xsl:param name="pPosition" select="position()"/>
+    <xsl:param name="pHasItem" select="false()"/>
+    <!-- note special $5 processing for LoC below -->
+    <xsl:if test="$pHasItem or not($localfields and marc:subfield[@code='5'])">
+      <xsl:variable name="vXmlLang"><xsl:apply-templates select="." mode="xmllang"/></xsl:variable>
+      <xsl:variable name="vWorkUri">
+        <xsl:value-of select="$recordid"/>#Work<xsl:value-of select="@tag"/>-<xsl:value-of select="$pPosition"/>
+      </xsl:variable>
+      <xsl:variable name="vNFI">
+        <xsl:choose>
+          <xsl:when test="translate(@ind1,'0123456789','')=''"><xsl:value-of select="@ind1"/></xsl:when>
+          <xsl:otherwise>0</xsl:otherwise>
+        </xsl:choose>
+      </xsl:variable>
+      <xsl:variable name="vProperty">
+        <xsl:choose>
+          <xsl:when test="@ind2='2'">bf:hasPart</xsl:when>
+          <xsl:otherwise>bf:relatedTo</xsl:otherwise>
+        </xsl:choose>
+      </xsl:variable>
+      <xsl:variable name="vmainTitle">
+        <xsl:call-template name="chopPunctuation">
+          <xsl:with-param name="chopString">
+            <xsl:value-of select="substring(marc:subfield[@code='a'],$vNFI+1)"/>
+          </xsl:with-param>
+        </xsl:call-template>
+      </xsl:variable>
+      <xsl:choose>
+        <xsl:when test="$serialization='rdfxml'">
+          <xsl:element name="{$vProperty}">
+            <bf:Work>
+              <xsl:attribute name="rdf:about"><xsl:value-of select="$vWorkUri"/></xsl:attribute>
+              <rdf:type>
+                <xsl:attribute name="rdf:resource">
+                  <xsl:value-of select="concat($bflc,'Uncontrolled')"/>
+                </xsl:attribute>
+              </rdf:type>
+              <xsl:if test="marc:subfield[@code='a']">
+                <bf:title>
+                  <bf:Title>
+                    <rdfs:label><xsl:value-of select="marc:subfield[@code='a']"/></rdfs:label>
+                    <bf:mainTitle><xsl:value-of select="$vmainTitle"/></bf:mainTitle>
+                  </bf:Title>
+                </bf:title>
+              </xsl:if>
+              <xsl:for-each select="marc:subfield[@code='n']">
+                <bf:partNumber><xsl:value-of select="."/></bf:partNumber>
+              </xsl:for-each>
+              <xsl:for-each select="marc:subfield[@code='p']">
+                <bf:partName><xsl:value-of select="."/></bf:partName>
+              </xsl:for-each>
+              <xsl:apply-templates select="marc:subfield[@code='5']" mode="subfield5">
+                <xsl:with-param name="serialization" select="$serialization"/>
+              </xsl:apply-templates>
+            </bf:Work>
+          </xsl:element>
+        </xsl:when>
+      </xsl:choose>
+    </xsl:if>
+  </xsl:template>
 
   <xsl:template match="marc:datafield[@tag='752' or (@tag='880' and substring(marc:subfield[@code='6'],1,3)='752')]" mode="work">
     <xsl:param name="serialization" select="'rdfxml'"/>
