@@ -9,6 +9,7 @@ Changes towards updated v1.7 specifications:
   ConvSpec-3XX: Ontology update, note generation
   ConvSpec-590-410-Links: Note generation
   ConvSpec-5XX: Note generation
+  ConvSpec-720,740-758: Updated processing for 740
   ConvSpec-760-788: Updated processing for 776, 777
 
 Remove namespace declaration for xpath-functions (fix bug with current-dateTime())
